--- a/DScaler/Help/Authors.htm
+++ b/DScaler/Help/Authors.htm
@@ -6,7 +6,7 @@
 <title>DScaler -- Authors</title>
 <!-- #EndEditable -->
 <meta http-equiv="Content-Type" content=
-"text/html; charset=iso-8859-1">
+"text/html; charset=utf-8">
 <style type="text/css">
 <!--
 p {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
@@ -38,7 +38,7 @@ height="1"></td>
 "DScaler Logo"></td>
 <td colspan="2" align="right" valign="bottom"><font face=
 "Verdana, Arial, Helvetica, sans-serif" size="5"><b>
-<!-- #BeginEditable "Page%20Title" -->DScaler Authors 
+<!-- #BeginEditable "Page%20Title" -->DScaler AuthorsÂ 
 <!-- #EndEditable --></b></font></td>
 </tr>
 
@@ -48,7 +48,7 @@ height="2"></td>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr>
@@ -147,10 +147,10 @@ code.
 
 <blockquote>
 <p>An engineer working at Conexant Systems Inc., the makers of
-the 8x8 series chips that DScaler runs on.  He basically
+the 8x8 series chips that DScaler runs on.Â  He basically
 meditates peace between the DScaler software and the 8x8 video
-capture hardware.  When any of us fails on a nasty 8x8 issue, he
-takes over and gets the job done from time to time.  One of his
+capture hardware.Â  When any of us fails on a nasty 8x8 issue, he
+takes over and gets the job done from time to time.Â  One of his
 several valuable contributions include a bug fix to make
 Macrovision-encoded sources watchable in DScaler, without
 purple-lines interference.</p>
@@ -197,7 +197,7 @@ effort.</p>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr bgcolor="#FFCC00">
@@ -208,7 +208,7 @@ effort.</p>
 </tr>
 </table>
 
-<p> </p>
+<p>Â </p>
 
 </body><!-- #EndTemplate -->
 
