--- a/DScaler/Help/BT848Advanced.htm
+++ b/DScaler/Help/BT848Advanced.htm
@@ -6,7 +6,7 @@
 <title>DScaler -- BT8x8 Advanced Settings</title>
 <!-- #EndEditable -->
 <meta http-equiv="Content-Type" content=
-"text/html; charset=iso-8859-1">
+"text/html; charset=utf-8">
 <style type="text/css">
 <!--
 p {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
@@ -49,7 +49,7 @@ height="2"></td>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr>
@@ -116,7 +116,7 @@ See above.</td>
 <td>
 <p align="center">1</p>
 </td>
-<td> </td>
+<td>Â </td>
 </tr>
 
 <tr>
@@ -131,7 +131,7 @@ filter mentioned below)</td>
 <tr>
 <td>Odd Luma Peak</td>
 <td align="center">0</td>
-<td> </td>
+<td>Â </td>
 </tr>
 
 <tr>
@@ -146,7 +146,7 @@ set to 0 for NTSC systems.</td>
 <td align="center">0</td>
 <td>From the datasheet: The Luma Decimation filter is used to
 reduce the high-frequency component of the luma signal. Useful
-when scaling to CIF resolutions or lower.  If ON it enables luma
+when scaling to CIF resolutions or lower.Â  If ON it enables luma
 decimation using the selectable H filter.</td>
 </tr>
 
@@ -155,7 +155,7 @@ decimation using the selectable H filter.</td>
 <td>
 <p align="center">0</p>
 </td>
-<td> </td>
+<td>Â </td>
 </tr>
 
 <tr>
@@ -171,7 +171,7 @@ adjacent lines of<br>
 <tr>
 <td>Odd Comb</td>
 <td align="center">1</td>
-<td> </td>
+<td>Â </td>
 </tr>
 
 <tr>
@@ -364,7 +364,7 @@ coast polarity is active low.
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr>
@@ -372,7 +372,7 @@ coast polarity is active low.
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr bgcolor="#FFCC00">
