--- a/DScaler/Help/Bob.htm
+++ b/DScaler/Help/Bob.htm
@@ -6,7 +6,7 @@
 <title>DScaler -- Simple BOB Method</title>
 <!-- #EndEditable -->
 <meta http-equiv="Content-Type" content=
-"text/html; charset=iso-8859-1">
+"text/html; charset=utf-8">
 <style type="text/css">
 <!--
 p {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
@@ -49,21 +49,21 @@ height="2"></td>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr>
 <td colspan="3">
 <!-- #BeginEditable "Text" -->
 <p>This uses only the most recent field and fills the lines in
-between with interpolated pixels.  This method has in may ways
+between with interpolated pixels.Â  This method has in may ways
 been superceded by Scaler BOB.</p>
 <!-- #EndEditable -->
 </td>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr>
@@ -71,7 +71,7 @@ been superceded by Scaler BOB.</p>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr bgcolor="#FFCC00">
