--- a/DScaler/Help/DScaler_Readme.htm
+++ b/DScaler/Help/DScaler_Readme.htm
@@ -6,7 +6,7 @@
 <title>DScaler -- Readme</title>
 <!-- #EndEditable -->
 <meta http-equiv="Content-Type" content=
-"text/html; charset=iso-8859-1">
+"text/html; charset=utf-8">
 <style type="text/css">
 <!--
 p {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
@@ -49,7 +49,7 @@ height="2"></td>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr>
@@ -98,19 +98,19 @@ the processor requirements.  DScaler may not now run on slower hardware.</p>
 <h1>Warning</h1>
 
 <p>This program installs a temporary driver
-while it runs.  This means that some of the code runs inside
-Ring0 along with the kernel.  What this means is that if anything
+while it runs.Â  This means that some of the code runs inside
+Ring0 along with the kernel.Â  What this means is that if anything
 goes wrong this program can crash your whole system causing a
-BSOD in NT or a hanging 95/98.  Please do not use kill task to stop DScaler except 
+BSOD in NT or a hanging 95/98.Â  Please do not use kill task to stop DScaler except 
 as a last resort.</p>
 
 <p>If using a debugger then it it is
 very important that the program is allowed to shut down
-normally.  If you use Stop Debugging while running the program
+normally.Â  If you use Stop Debugging while running the program
 you system WILL crash.</p>
 
 <p>As a precaution sync the disks before
-running this program.  Use the sync utility from <a target="_blank" href=
+running this program.Â  Use the sync utility from <a target="_blank" href=
 "http://www.sysinternals.com/">http://www.sysinternals.com/</a>
 for whichever operating system you are running.</p>
 </font>
@@ -130,7 +130,7 @@ for whichever operating system you are running.</p>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr bgcolor="#FFCC00">
