--- a/DScaler/Help/Developer.htm
+++ b/DScaler/Help/Developer.htm
@@ -6,7 +6,7 @@
 <title>DScaler -- Developers</title>
 <!-- #EndEditable -->
 <meta http-equiv="Content-Type" content=
-"text/html; charset=iso-8859-1">
+"text/html; charset=utf-8">
 <style type="text/css">
 <!--
 p {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
@@ -49,7 +49,7 @@ height="2"></td>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr>
@@ -90,13 +90,13 @@ daily (<a target="_blank" href="http://www.dscaler.org/downloads/dscalermodule.z
 
 <p>The source compiles under MS Visual C++ 6.0. The application
 has grown out of the GPL code base of MultiDec and MoreTV, two
-cable descrambling programs.  By combining the GPL parts of both
+cable descrambling programs.Â  By combining the GPL parts of both
 and extending them both, we were able to create a new legal
 totally open source project.</p>
 
-<p>The individual source files are in the <a target="_blank" href=
+<p>The individual source files are in theÂ <a target="_blank" href=
 "http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/deinterlace/">CVS
-Repository</a>.  To get check-out and check-in access, you will
+Repository</a>.Â  To get check-out and check-in access, you will
 need to get cvs and to make a few configuration changes see the
 project <a href="CVS_Instructions.htm">CVS Instructions</a> for
 more details. Please e-mail your Sourceforge username to the <a
@@ -167,7 +167,7 @@ most of the information you need should be buried in this lot.</p>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr>
@@ -175,7 +175,7 @@ most of the information you need should be buried in this lot.</p>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr bgcolor="#FFCC00">
