--- a/DScaler/Help/EvenOnly.htm
+++ b/DScaler/Help/EvenOnly.htm
@@ -6,7 +6,7 @@
 <title>DScaler -- Even Only Method</title>
 <!-- #EndEditable -->
 <meta http-equiv="Content-Type" content=
-"text/html; charset=iso-8859-1">
+"text/html; charset=utf-8">
 <style type="text/css">
 <!--
 p {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
@@ -49,22 +49,22 @@ height="2"></td>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr>
 <td colspan="3">
 <!-- #BeginEditable "Text" -->
 <p>These use only the even fields out of each pair and uses hardware
-scaling.  This reduces bob artifacts at the cost of loss of
-information.  This method was originally intended to be used with game
+scaling.Â  This reduces bob artifacts at the cost of loss of
+information.Â  This method was originally intended to be used with game
 consoles.</p>
 <!-- #EndEditable -->
 </td>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr>
@@ -72,7 +72,7 @@ consoles.</p>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr bgcolor="#FFCC00">
