--- a/DScaler/Help/FAQ.htm
+++ b/DScaler/Help/FAQ.htm
@@ -6,7 +6,7 @@
 <title>DScaler -- Frequently Asked Questions</title>
 <!-- #EndEditable -->
 <meta http-equiv="Content-Type" content=
-"text/html; charset=iso-8859-1">
+"text/html; charset=utf-8">
 <style type="text/css">
 <!--
 p {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
@@ -45,8 +45,8 @@ alt="DScaler Logo"></td>
 <tr>
 <td colspan="2" align="right" valign="bottom"><font face=
 "Verdana, Arial, Helvetica, sans-serif" size="5"><b>
-<!-- #BeginEditable "Page%20Title" -->FAQ 
-<!-- #EndEditable --> </b></font> </td>
+<!-- #BeginEditable "Page%20Title" -->FAQÂ 
+<!-- #EndEditable -->Â </b></font> </td>
 </tr>
 
 <tr bgcolor="#FFCC00" align="right">
@@ -237,9 +237,9 @@ us</a></i><br>
 
 <h3>Video Deinterlace (Bob)</h3>
 
-<p>This method is based on Gunnar Thalin's VirtualDub filter.  If
+<p>This method is based on Gunnar Thalin's VirtualDub filter.Â  If
 it detects weaving artifacts in the current image it uses bob to
-get rid of them.  This method has a tendency to bob rather too
+get rid of them.Â  This method has a tendency to bob rather too
 much and gives poor results on fine static images.</p>
 
 <h3>Video Deinterlace (Weave)</h3>
@@ -257,13 +257,13 @@ above two methods however it uses more CPU.</p>
 <h3>Simple Weave</h3>
 
 <p>This method just combines the most recent even and odd
-fields.  This causes motion artifacts and is provided for
+fields.Â  This causes motion artifacts and is provided for
 comparison.</p>
 
 <h3>Simple Bob</h3>
 
 <p>This uses only the most recent field and fills the lines in
-between with interpolated pixels.  This method has in may ways
+between with interpolated pixels.Â  This method has in may ways
 been superceded by Scaler BOB.</p>
 
 <h3>Blended Clip</h3>
@@ -283,21 +283,21 @@ parameter when starting DScaler.exe. Somewhat CPU intensive</p>
 
 <p>Uses the DirectDraw hardware bob feature (if available), this
 uses the current field and lets the video card scaler size the
-picture to fit the screen.  Produces good results for fast moving
+picture to fit the screen.Â  Produces good results for fast moving
 images.</p>
 
 <h3>Even Fields Only<br>
  Odd Fields Only</h3>
 
 <p>These use only one field out of each pair and use hardware
-scaling.  This reduces bob artifacts at the cost of loss of
-information.  These were originally intended to be used with game
+scaling.Â  This reduces bob artifacts at the cost of loss of
+information.Â  These were originally intended to be used with game
 consoles.</p>
 
 <h3>Adaptive Deinterlace</h3>
 
 <p>This method uses the amount of motion detected to select the
-best deinterlacing alogoritm.  Currently by default it switches
+best deinterlacing alogoritm.Â  Currently by default it switches
 between 2-Frame and weave.</p>
 
 <h3>Greedy deinterlace method</h3>
@@ -314,9 +314,9 @@ results with normal Auto Pull Down processing.</p>
 <h3>Greedy 2 Frame method</h3>
 
 <p>This method tries to combine the best features of the 2-frame
-algorithm with the looking ahead ability of the greedy method.  I
+algorithm with the looking ahead ability of the greedy method.Â  I
 find this methods works well on sports and other high motion
-material.  With static images and low quality sources there may
+material.Â  With static images and low quality sources there may
 be unacceptable levels of bobbing.</p>
 
 <h3>3:2 Pulldown, Skip Field X</h3>
@@ -509,9 +509,9 @@ from 2 or 3 sources.</p>
 <h2>I have problems with sound?</h2>
 
 <p>Note that support for sound from cards internal tuners is not
-a priority for most of the developers of DScaler.  Almost all the
+a priority for most of the developers of DScaler.Â  Almost all the
 developers use some kind of external TV tuner and bypass the
-sound issue.  Having said that we will be pleased to accept fixes
+sound issue.Â  Having said that we will be pleased to accept fixes
 for any card but are not in a position to add support for new
 cards ourselves.</p>
 
@@ -519,14 +519,14 @@ cards ourselves.</p>
 I get dropped frames?</h2>
 
 <p>Both problems seem to be caused by not having a powerful
-enough machine to run everything all at the same time.  The
+enough machine to run everything all at the same time.Â  The
 things that use up a lot of CPU time are 2-Frame, Blended Clip & Greedy
-deinterlacing and automatic pulldown detection.  Try moving to
-another pulldown method or switching off autodetection.  The
+deinterlacing and automatic pulldown detection.Â  Try moving to
+another pulldown method or switching off autodetection.Â  The
 other alternative is to buy a faster PC ;-))</p>
 
 <p>There is now a setting in Select Hardware which allows you to
-tell DScaler how fast your PC is.  Try selecting alower speed if
+tell DScaler how fast your PC is.Â  Try selecting alower speed if
 you get either of these problems.</p>
 
 <p><a name="PURPLESTRIPES"></a></p>
@@ -659,7 +659,7 @@ page</a>.
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr bgcolor="#FFCC00">
@@ -670,7 +670,7 @@ page</a>.
 </tr>
 </table>
 
-<p> </p>
+<p>Â </p>
 
 <!-- #EndTemplate -->
 </body>
