--- a/DScaler/Help/Greedy2Frame.htm
+++ b/DScaler/Help/Greedy2Frame.htm
@@ -6,7 +6,7 @@
 <title>DScaler -- Greedy 2 Frame Method</title>
 <!-- #EndEditable -->
 <meta http-equiv="Content-Type" content=
-"text/html; charset=iso-8859-1">
+"text/html; charset=utf-8">
 <style type="text/css">
 <!--
 p {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
@@ -49,16 +49,16 @@ height="2"></td>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr>
 <td colspan="3">
 <!-- #BeginEditable "Text" -->
 <p>This method tries to combine the best features of the 2-frame
-algorithm with the looking ahead ability of the greedy method.  I
+algorithm with the looking ahead ability of the greedy method.Â  I
 find this methods works well on sports and other high motion
-material.  With static images and low quality sources there may
+material.Â  With static images and low quality sources there may
 be unacceptable levels of bobbing.</p>
 
 <p>This method uses four fields and has a configuarable motion detect.  Motion is
@@ -99,7 +99,7 @@ the best all round performance.</p>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr>
@@ -107,7 +107,7 @@ the best all round performance.</p>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr bgcolor="#FFCC00">
