--- a/DScaler/Help/Install.htm
+++ b/DScaler/Help/Install.htm
@@ -6,7 +6,7 @@
 <title>DScaler - Installation &amp; Setup</title>
 <!-- #EndEditable -->
 <meta http-equiv="Content-Type" content=
-"text/html; charset=iso-8859-1">
+"text/html; charset=utf-8">
 <style type="text/css">
 <!--
 p {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
@@ -38,7 +38,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
 "DScaler logo"></td>
 <td colspan="2" align="right" valign="bottom"><font face=
 "Verdana, Arial, Helvetica, sans-serif" size="5"><b>
-<!-- #BeginEditable "Page%20Title" -->Installation &amp; Setup 
+<!-- #BeginEditable "Page%20Title" -->Installation &amp; SetupÂ 
 <!-- #EndEditable --></b></font></td>
 </tr>
 
@@ -48,7 +48,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr>
@@ -126,7 +126,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr>
@@ -134,7 +134,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr bgcolor="#FFCC00">
