--- a/DScaler/Help/Nav.htm
+++ b/DScaler/Help/Nav.htm
@@ -3,7 +3,7 @@
 <!-- #BeginTemplate "/Templates/dtvnormal.dwt" -->
 <head>
 <meta http-equiv="Content-Type" content=
-"text/html; charset=iso-8859-1">
+"text/html; charset=utf-8">
 <title></title>
 </head>
 <body bgcolor="#FFFFFF">
@@ -13,19 +13,13 @@
 </td>
 <td>
 <div align="center">
-<a href="../index.php" target="_top" >home</a> | 
-<a href="../about.htm" target="_top">about</a> | 
-<a href="../Reviews.htm" target="_top">reviews</a> | 
-<a href="../screenshots/index.htm" target="_top">screenshots</a> | 
-<a href="../downloads.htm" target="_top">download</a> | 
-<a href="Authors.htm" target="main">authors</a> | 
-<a href="Thanks.htm" target="main">thanks</a> <br>
-<a href="Install.htm" target="main">setup</a> | 
-<a href="keyboard.htm" target="main">keyboard shortcuts</a> |
-<a href="http://sourceforge.net/mail/?group_id=7420"  target="_top">mailing list</a> | 
-<a href="FAQ.htm" target="main">faq</a> | 
-<a href="../developers.htm" target="_top">developers</a> | 
-<a href="../Links.htm" target="_top">links</a></div>
+<a href="../index.php" target="_top" >Home</a> | 
+<a href="../dscaler4.htm" target="_top">TV viewer</a> | 
+<a href="../dscaler5.htm" target="_top">Media Decoders</a> |
+<a href="../oldsuiff.htm" target="_top">Old Stuff</a> | 
+<a href="../donate.htm" target="_top">Donate</a> | 
+<a href="../user_support.htm" target="_top">Support</a> | 
+<a href="../developers.htm" target="_top">Developers</a> | 
 </td>
 <td>
 <p><a href="http://sourceforge.net"><img src=
