--- a/DScaler/Help/News.htm
+++ b/DScaler/Help/News.htm
@@ -6,7 +6,7 @@
 <title>DScaler -- What's New</title>
 <!-- #EndEditable -->
 <meta http-equiv="Content-Type" content=
-"text/html; charset=iso-8859-1">
+"text/html; charset=utf-8">
 <style type="text/css">
 <!--
 p {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
@@ -49,7 +49,7 @@ height="2"></td>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr>
@@ -101,7 +101,7 @@ height="2"></td>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr bgcolor="#FFCC00">
@@ -112,7 +112,7 @@ height="2"></td>
 </tr>
 </table>
 
-<p> </p>
+<p>Â </p>
 
 <!-- #EndTemplate -->
 </body>
