--- a/DScaler/Help/Standards.htm
+++ b/DScaler/Help/Standards.htm
@@ -6,7 +6,7 @@
 <title>DScaler -- Coding Standards</title>
 <!-- #EndEditable -->
 <meta http-equiv="Content-Type" content=
-"text/html; charset=iso-8859-1">
+"text/html; charset=utf-8">
 <style type="text/css">
 <!--
 p {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
@@ -49,7 +49,7 @@ height="2"></td>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr>
@@ -229,7 +229,7 @@ level as the block they describe.</p>
 <p><i>Standard 8:</i>	Ensure comments are correct (and stay
 correct).</p>
 
-<p><b><font face="Arial" size="4"> </font></b></p>
+<p><b><font face="Arial" size="4">Â </font></b></p>
 
 <p><b><font face="Arial" size="4">Code Layout</font></b></p>
 
@@ -252,7 +252,7 @@ complexity of a function.</p>
 <p><i>Standard 10:</i>	Indentation level is four (4) spaces. Set
 editor to replace tabs with spaces</p>
 
-<p><b><i><font face="Arial"> </font></i></b></p>
+<p><b><i><font face="Arial">Â </font></i></b></p>
 
 <p><b><i><font face="Arial">Braces and
 Parenthesis</font></i></b></p>
@@ -352,7 +352,7 @@ enum eIdentifier
 };
 </pre></code>
 <p>- or -</p>
- 
+Â 
 <code><pre>
 enum eIdentifier
 {
@@ -396,7 +396,7 @@ line as the else, and shall have a final else statement (most
 likely with a <font face="Courier New">NEVER_GET_HERE</font>;
 statement).</p>
 
- 
+Â 
 <code><pre>
 if( x &gt; y )
 {
@@ -467,7 +467,7 @@ default:
 "Courier New">while</font> in a <font face="Courier New">do
 while</font> statement on the same line as the closing brace.</p>
 
- 
+Â 
 
 do
 {
@@ -770,7 +770,7 @@ numberOfDays = ( get_IsLeapYear() == TRUE ) + 28; // not OK
 should use a comparison operator. Do not use implicit <font face=
 "Courier New">!= 0</font>.</p>
 
-<p><font face="Courier New"> </font></p>
+<p><font face="Courier New">Â </font></p>
 
 <p><font face="Courier New">ASSERT(pObject != 0); //
 good</font></p>
@@ -828,7 +828,7 @@ the intended operation.</p>
 <p><i>Guideline 32:</i>	Use nested if only to clarify the
 intended order of evaluation.</p>
 
- 
+Â 
 <code><pre>
 if( Foo() == true )
 {
@@ -1101,12 +1101,12 @@ public:
     //
     // Accessors
     //
- 
+Â 
     /**
     Get the number of MyClass instantiations.
     @return Int const reference to count
     */
-     static const INT GetInstanceCount(void);
+Â     static const INT GetInstanceCount(void);
 
     /**
     Return the object data member
@@ -1350,7 +1350,7 @@ Applications</i>.</p>
 <p>Benjamin/Cummings, Redwood City, CA, 2nd edition, 1994.</p>
 </div>
 
-<p>The Corelinux Consortium.</p>
+<p>TheÂ Corelinux Consortium.</p>
 
 <div style="margin-left: 2em">
 <p><i>The Corelinux C++ Coding Standards</i>.</p>
@@ -1360,7 +1360,7 @@ Applications</i>.</p>
 <p>http://corelinux.sourceforge.net/cppstnd.php.</p>
 </div>
 
-<p>The Corelinux Consortium.</p>
+<p>TheÂ Corelinux Consortium.</p>
 
 <div style="margin-left: 2em">
 <p><i>The Corelinux Object Oriented Design Standards</i>.</p>
@@ -1368,7 +1368,7 @@ Applications</i>.</p>
 <p>The Corelinux Consortium, 1.3 edition, May 2000b.</p>
 </div>
 
-<p>Phillip B. Crosby.</p>
+<p>PhillipÂ B. Crosby.</p>
 
 <div style="margin-left: 2em">
 <p><i>Quality Is Free</i>.</p>
@@ -1434,7 +1434,7 @@ Programs</i>.</p>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr>
@@ -1442,7 +1442,7 @@ Programs</i>.</p>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr bgcolor="#FFCC00">
