--- a/DScaler/Help/VideoBob.htm
+++ b/DScaler/Help/VideoBob.htm
@@ -6,7 +6,7 @@
 <title>DScaler -- Video Bob Method</title>
 <!-- #EndEditable -->
 <meta http-equiv="Content-Type" content=
-"text/html; charset=iso-8859-1">
+"text/html; charset=utf-8">
 <style type="text/css">
 <!--
 p {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
@@ -49,16 +49,16 @@ height="2"></td>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr>
 <td colspan="3">
 <!-- #BeginEditable "Text" -->
 
-<p>This method is based on Gunnar Thalin's VirtualDub filter.  If
+<p>This method is based on Gunnar Thalin's VirtualDub filter.Â  If
 it detects weaving artifacts in the current image it uses bob to
-get rid of them.  This method has a tendency to bob rather too
+get rid of them.Â  This method has a tendency to bob rather too
 much and gives poor results on fine static images.</p>
 
 <p>It uses the most recent two frames for the calculations and is not as CPU 
@@ -90,7 +90,7 @@ bobed pixels.</td>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr>
@@ -98,7 +98,7 @@ bobed pixels.</td>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr bgcolor="#FFCC00">
