--- a/DScaler/Help/user_support.htm
+++ b/DScaler/Help/user_support.htm
@@ -6,7 +6,7 @@
 <title>DScaler -- User Support</title>
 <!-- #EndEditable -->
 <meta http-equiv="Content-Type" content=
-"text/html; charset=iso-8859-1">
+"text/html; charset=utf-8">
 <style type="text/css">
 <!--
 p {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
@@ -38,7 +38,7 @@ height="1"></td>
 "DScaler Logo"></td>
 <td colspan="2" align="right" valign="bottom"><font face=
 "Verdana, Arial, Helvetica, sans-serif" size="5"><b>
-<!-- #BeginEditable "Page%20Title" -->User Support  
+<!-- #BeginEditable "Page%20Title" -->User Support Â 
 <!-- #EndEditable --></b></font></td>
 </tr>
 
@@ -48,7 +48,7 @@ height="2"></td>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr>
@@ -60,7 +60,7 @@ height="2"></td>
         unknown bug, please post it in the <a
 target="_blank" href=
 "http://sourceforge.net/bugs/?group_id=7420">DScaler bugs page</a> at <a target="_blank" href=
-"http://sourceforge.net/">SourceForge</a>.  Please check to make sure that the 
+"http://sourceforge.net/">SourceForge</a>.Â  Please check to make sure that the 
         bug has not already been reported and try to give as much information 
         as possible when describing the bug.</p>
       <p>In the past, most support was provided through the <a
@@ -104,7 +104,7 @@ target="_blank" href=
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr bgcolor="#FFCC00">
@@ -115,7 +115,7 @@ target="_blank" href=
 </tr>
 </table>
 
-<p> </p>
+<p>Â </p>
 
 <!-- #EndTemplate -->
 </body>
