--- a/DScaler/Help/22Pulldown.htm
+++ b/DScaler/Help/22Pulldown.htm
@@ -6,7 +6,7 @@
 <title>DScaler -- 2:2 Pulldown Settings</title>
 <!-- #EndEditable -->
 <meta http-equiv="Content-Type" content=
-"text/html; charset=iso-8859-1">
+"text/html; charset=utf-8">
 <style type="text/css">
 <!--
 p {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
@@ -49,7 +49,7 @@ height="2"></td>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr>
@@ -122,7 +122,7 @@ allowed to the bad cadence method before switching back to video mode.
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr>
@@ -130,7 +130,7 @@ allowed to the bad cadence method before switching back to video mode.
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr bgcolor="#FFCC00">
