--- a/DScaler/Help/Adaptive.htm
+++ b/DScaler/Help/Adaptive.htm
@@ -6,7 +6,7 @@
 <title>DScaler -- Adaptive Method</title>
 <!-- #EndEditable -->
 <meta http-equiv="Content-Type" content=
-"text/html; charset=iso-8859-1">
+"text/html; charset=utf-8">
 <style type="text/css">
 <!--
 p {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
@@ -49,7 +49,7 @@ height="2"></td>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr>
@@ -57,7 +57,7 @@ height="2"></td>
 <!-- #BeginEditable "Text" -->
 
 <p>This method uses the amount of motion detected to select the
-best deinterlacing alogoritm.  Currently by default it switches
+best deinterlacing alogoritm.Â  Currently by default it switches
 between 2-Frame and weave.</p>
 
 <table border="1">
@@ -118,7 +118,7 @@ static image mode.</td>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr>
@@ -126,7 +126,7 @@ static image mode.</td>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr bgcolor="#FFCC00">
