--- a/DScaler/Help/AdaptiveNoise.htm
+++ b/DScaler/Help/AdaptiveNoise.htm
@@ -8,7 +8,7 @@
     </TITLE>
     <!-- #EndEditable -->
     <META HTTP-EQUIV="Content-Type" CONTENT=
-    "text/html; charset=iso-8859-1">
+    "text/html; charset=utf-8">
 <STYLE TYPE="text/css">
 <!--
 p {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
