--- a/DScaler/Help/BlendedClip.htm
+++ b/DScaler/Help/BlendedClip.htm
@@ -6,7 +6,7 @@
 <title>DScaler -- Blended Clip Method</title>
 <!-- #EndEditable -->
 <meta http-equiv="Content-Type" content=
-"text/html; charset=iso-8859-1">
+"text/html; charset=utf-8">
 <style type="text/css">
 <!--
 p {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
@@ -49,7 +49,7 @@ height="2"></td>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr>
@@ -70,7 +70,7 @@ parameter when starting DScaler.exe. Somewhat CPU intensive</p>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr>
@@ -78,7 +78,7 @@ parameter when starting DScaler.exe. Somewhat CPU intensive</p>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr bgcolor="#FFCC00">
