--- a/DScaler/Help/Deinterlace.htm
+++ b/DScaler/Help/Deinterlace.htm
@@ -6,7 +6,7 @@
 <title>DScaler -- Deinterlace Methods</title>
 <!-- #EndEditable -->
 <meta http-equiv="Content-Type" content=
-"text/html; charset=iso-8859-1">
+"text/html; charset=utf-8">
 <style type="text/css">
 <!--
 p {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
@@ -49,7 +49,7 @@ height="2"></td>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr>
@@ -65,7 +65,7 @@ in all situations.  The closest to an all round method is Greedy 2 Frame.</p>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr>
@@ -73,7 +73,7 @@ in all situations.  The closest to an all round method is Greedy 2 Frame.</p>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr bgcolor="#FFCC00">
