--- a/DScaler/Help/EPG.html
+++ b/DScaler/Help/EPG.html
@@ -31,7 +31,7 @@
   
   <title>DScaler -- Calibration</title>
 <!-- #EndEditable -->
-  <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 
 
