--- a/DScaler/Help/Gamma.htm
+++ b/DScaler/Help/Gamma.htm
@@ -6,7 +6,7 @@
 <title>DScaler -- Gamma Filter</title>
 <!-- #EndEditable -->
 <meta http-equiv="Content-Type" content=
-"text/html; charset=iso-8859-1">
+"text/html; charset=utf-8">
 <style type="text/css">
 <!--
 p {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
@@ -49,7 +49,7 @@ height="2"></td>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr>
@@ -113,7 +113,7 @@ placed in the DScaler directory.  This file should have the following format:</p
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr>
@@ -121,7 +121,7 @@ placed in the DScaler directory.  This file should have the following format:</p
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr bgcolor="#FFCC00">
