--- a/DScaler/Help/GradualNoise.htm
+++ b/DScaler/Help/GradualNoise.htm
@@ -6,7 +6,7 @@
       DScaler -- Gradual Noise filter
     </TITLE>
     <!-- #EndEditable -->
-    <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=iso-8859-1">
+    <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=utf-8">
 <STYLE TYPE="text/css">
 <!--
 p {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
