--- a/DScaler/Help/IniFile.htm
+++ b/DScaler/Help/IniFile.htm
@@ -6,7 +6,7 @@
 <title>DScaler -- Ini File Settings</title>
 <!-- #EndEditable -->
 <meta http-equiv="Content-Type" content=
-"text/html; charset=iso-8859-1">
+"text/html; charset=utf-8">
 <style type="text/css">
 <!--
 p {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
@@ -39,7 +39,7 @@ height="1"></td>
 <td colspan="2" align="right" valign="bottom"><font face=
 "Verdana, Arial, Helvetica, sans-serif" size="5"><b>
 <!-- #BeginEditable "Page%20Title" -->
-DScaler.ini Settings  
+DScaler.ini Settings Â 
 <!-- #EndEditable --></b></font></td>
 </tr>
 
@@ -49,22 +49,22 @@ height="2"></td>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr>
 <td colspan="3">
 <!-- #BeginEditable "Text" -->
 <p>Almost all features of the program are configurable through the menu
-system.  All the
+system.Â  All the
 settings used by the program are stored in the ini file and no changes are
 made to the registry.</p>
 
 <p>While the default name of this file is DScaler.ini, other
-names and copies may be used, to create multiple profiles.  Just
+names and copies may be used, to create multiple profiles.Â  Just
 create a shortcut to invoke DScaler with a single parameter such
-as "DScaler.exe vcr.ini".  This would cause the vcr.ini (or
-whatever) file to be used and saved on exit.  Doing this is
+as "DScaler.exe vcr.ini".Â  This would cause the vcr.ini (or
+whatever) file to be used and saved on exit.Â  Doing this is
 easiest if you copy a working DScaler.ini file first and then
 change it using the DScaler menus.</p>
 
@@ -72,7 +72,7 @@ change it using the DScaler menus.</p>
 </td>
 </tr>
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr>
@@ -80,7 +80,7 @@ change it using the DScaler menus.</p>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr bgcolor="#FFCC00">
