--- a/DScaler/Help/LinearCorrection.htm
+++ b/DScaler/Help/LinearCorrection.htm
@@ -6,7 +6,7 @@
 <title>DScaler -- Linear Correction Settings</title>
 <!-- #EndEditable -->
 <meta http-equiv="Content-Type" content=
-"text/html; charset=iso-8859-1">
+"text/html; charset=utf-8">
 <style type="text/css">
 <!--
 p {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
@@ -49,7 +49,7 @@ height="2"></td>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr>
@@ -111,7 +111,7 @@ bottom of the picture.</td>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr>
@@ -119,7 +119,7 @@ bottom of the picture.</td>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr bgcolor="#FFCC00">
