--- a/DScaler/Help/LogoKiller.htm
+++ b/DScaler/Help/LogoKiller.htm
@@ -6,7 +6,7 @@
 <title>DScaler -- Logo Killer Filter</title>
 <!-- #EndEditable -->
 <meta http-equiv="Content-Type" content=
-"text/html; charset=iso-8859-1">
+"text/html; charset=utf-8">
 <style type="text/css">
 <!--
 p {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
@@ -49,7 +49,7 @@ height="2"></td>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr>
@@ -104,7 +104,7 @@ dynamic maximum, all intenal luma values are then clipped to this maximum</li>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr>
@@ -112,7 +112,7 @@ dynamic maximum, all intenal luma values are then clipped to this maximum</li>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr bgcolor="#FFCC00">
