--- a/DScaler/Help/ScalerBob.htm
+++ b/DScaler/Help/ScalerBob.htm
@@ -6,7 +6,7 @@
 <title>DScaler -- Scaler Bob Method</title>
 <!-- #EndEditable -->
 <meta http-equiv="Content-Type" content=
-"text/html; charset=iso-8859-1">
+"text/html; charset=utf-8">
 <style type="text/css">
 <!--
 p {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
@@ -49,7 +49,7 @@ height="2"></td>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr>
@@ -57,7 +57,7 @@ height="2"></td>
 <!-- #BeginEditable "Text" -->
 <p>Uses the DirectDraw hardware bob feature (if available), this
 uses the current field and lets the video card scaler size the
-picture to fit the screen.  Produces reasonable results for fast moving
+picture to fit the screen.Â  Produces reasonable results for fast moving
 images.</p>
 
 <p><b><font face="Arial" size="4">Who Should Use
@@ -72,7 +72,7 @@ to be resized as the type swiches and this will cause flicker.</p>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr>
@@ -80,7 +80,7 @@ to be resized as the type swiches and this will cause flicker.</p>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr bgcolor="#FFCC00">
