--- a/DScaler/Help/SourceSpecific.htm
+++ b/DScaler/Help/SourceSpecific.htm
@@ -6,7 +6,7 @@
 <title>DScaler -- Source Specific Settings</title>
 <!-- #EndEditable -->
 <meta http-equiv="Content-Type" content=
-"text/html; charset=iso-8859-1">
+"text/html; charset=utf-8">
 <style type="text/css">
 <!--
 p {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
@@ -49,7 +49,7 @@ height="2"></td>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr>
@@ -68,7 +68,7 @@ of material please let us know.</p>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr>
@@ -76,7 +76,7 @@ of material please let us know.</p>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr bgcolor="#FFCC00">
