--- a/DScaler/Help/Still.htm
+++ b/DScaler/Help/Still.htm
@@ -6,7 +6,7 @@
 <title>DScaler -- Still</title>
 <!-- #EndEditable -->
 <meta http-equiv="Content-Type" content=
-"text/html; charset=iso-8859-1">
+"text/html; charset=utf-8">
 <style type="text/css">
 <!--
 p {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
@@ -47,7 +47,7 @@ height="2"></td>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
   <tr> 
@@ -317,7 +317,7 @@ height="2"></td>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr>
@@ -325,7 +325,7 @@ height="2"></td>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr bgcolor="#FFCC00">
