--- a/DScaler/Help/Teletext.htm
+++ b/DScaler/Help/Teletext.htm
@@ -6,7 +6,7 @@
 <title>DScaler -- Teletext</title>
 <!-- #EndEditable -->
 <meta http-equiv="Content-Type" content=
-"text/html; charset=iso-8859-1">
+"text/html; charset=utf-8">
 <style type="text/css">
 <!--
 p {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
@@ -50,7 +50,7 @@ height="2"></td>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
   <tr> 
@@ -69,7 +69,7 @@ is found on TV signals broadcast in 50Hz countries.</p>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr>
@@ -77,7 +77,7 @@ is found on TV signals broadcast in 50Hz countries.</p>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr bgcolor="#FFCC00">
