--- a/DScaler/Help/Teletext2.htm
+++ b/DScaler/Help/Teletext2.htm
@@ -6,7 +6,7 @@
 <title>DScaler -- Teletext Settings</title>
 <!-- #EndEditable -->
 <meta http-equiv="Content-Type" content=
-"text/html; charset=iso-8859-1">
+"text/html; charset=utf-8">
 <style type="text/css">
 <!--
 p {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
@@ -50,7 +50,7 @@ height="2"></td>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
   <tr> 
@@ -182,7 +182,7 @@ LINE, EVERYTHING MOVES UP TO CATER		(update)
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr>
@@ -190,7 +190,7 @@ LINE, EVERYTHING MOVES UP TO CATER		(update)
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr bgcolor="#FFCC00">
