--- a/DScaler/Help/TemporalComb.htm
+++ b/DScaler/Help/TemporalComb.htm
@@ -7,7 +7,7 @@
       DScaler -- Temporal Comb Filter
     </TITLE>
     <!-- #EndEditable -->
-    <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=iso-8859-1">
+    <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=utf-8">
 <STYLE TYPE="text/css">
 <!--
 p {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
