--- a/DScaler/Help/Thanks.htm
+++ b/DScaler/Help/Thanks.htm
@@ -6,7 +6,7 @@
 <title>DScaler -- Thanks</title>
 <!-- #EndEditable -->
 <meta http-equiv="Content-Type" content=
-"text/html; charset=iso-8859-1">
+"text/html; charset=utf-8">
 <style type="text/css">
 <!--
 p {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
@@ -39,7 +39,7 @@ height="1"></td>
 <td colspan="2" align="right" valign="bottom"><font face=
 "Verdana, Arial, Helvetica, sans-serif" size="5"><b>
 <!-- #BeginEditable "Page%20Title" -->
-Thanks 
+ThanksÂ 
 <!-- #EndEditable --></b></font></td>
 </tr>
 
@@ -49,7 +49,7 @@ height="2"></td>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr>
@@ -67,7 +67,7 @@ code to the project.</li>
 <li>Mathias Ellinger for the driver from FreeTV on which DScaler's driver is based.</li>
 
 <li>Daniel Schmelzer for his hard work creating and
-updating the website. </li>
+updating the website.Â </li>
 
 <li>Yvon Quere for creating and updating the FAQ.</li>
 
@@ -101,7 +101,7 @@ for aspect ratio support.</li>
 <li>Gerd Knorr for the "v4l2/OSS device driver for saa7130/34" on which DScaler's saa713x
 support is based.  And for providing details on the saa7130/4 chip.</li>
 
-<li>Péter Gulyás for his contributions in saa7134 Nicam audio fixes.</li>
+<li>PÃ©ter GulyÃ¡s for his contributions in saa7134 Nicam audio fixes.</li>
 
 <li>Erik Spr&aring;ng for the new DScaler logo.</li>
 
@@ -111,7 +111,7 @@ support is based.  And for providing details on the saa7130/4 chip.</li>
 
 <li>John Isar for the Greek teletext code page.</li>
 
-<li>Eduardo José Tagle for the PAL-NC patch.</li>
+<li>Eduardo JosÃ© Tagle for the PAL-NC patch.</li>
 
 <li>Robin Zalek (aka Bob) for the new icon.</li>
 
@@ -133,7 +133,7 @@ support is based.  And for providing details on the saa7130/4 chip.</li>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr bgcolor="#FFCC00">
@@ -144,7 +144,7 @@ support is based.  And for providing details on the saa7130/4 chip.</li>
 </tr>
 </table>
 
-<p> </p>
+<p>Â </p>
 
 <!-- #EndTemplate -->
 </body>
