--- a/DScaler/Help/Weave.htm
+++ b/DScaler/Help/Weave.htm
@@ -6,7 +6,7 @@
 <title>DScaler -- Simple Weave Method</title>
 <!-- #EndEditable -->
 <meta http-equiv="Content-Type" content=
-"text/html; charset=iso-8859-1">
+"text/html; charset=utf-8">
 <style type="text/css">
 <!--
 p {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
@@ -49,14 +49,14 @@ height="2"></td>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr>
 <td colspan="3">
 <!-- #BeginEditable "Text" -->
 <p>This method just combines the most recent even and odd
-fields.  This causes motion artifacts and is provided for
+fields.Â  This causes motion artifacts and is provided for
 comparison.</p>
 <p>This method can also be used as part of the adaptive method with static images</p>
 <!-- #EndEditable -->
@@ -64,7 +64,7 @@ comparison.</p>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr>
@@ -72,7 +72,7 @@ comparison.</p>
 </tr>
 
 <tr>
-<td colspan="3"> </td>
+<td colspan="3">Â </td>
 </tr>
 
 <tr bgcolor="#FFCC00">
