--- a/DScaler/Help/keyboard.htm
+++ b/DScaler/Help/keyboard.htm
@@ -7,7 +7,7 @@
 
   <title>DScaler -- Keyboard Shortcuts</title>
 <!-- #EndEditable -->
-  <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
   <style type="text/css">
 <!--
