--- a/htdocs/dscaler4.htm
+++ b/htdocs/dscaler4.htm
@@ -12,7 +12,7 @@
   "HTML Tidy for Windows (vers 7 December 2008), see www.w3.org" />
   <!-- #BeginEditable "doctitle" -->
 
-  <title>DScaler - About</title><!-- #EndEditable "doctitle"-->
+  <title>DScaler - TV Viewer</title><!-- #EndEditable "doctitle"-->
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="keywords" content="deinterlace TV Video" />
   <link rel="stylesheet" type="text/css" href="./style.css" />
@@ -50,7 +50,7 @@
     <div id="header">
       <div id="wrapper-header2">
         <div id="wrapper-header3">
-          <h1><!-- #BeginEditable "Page%20Title" -->About 
+          <h1><!-- #BeginEditable "Page%20Title" -->DScaler TV Viewer 
           <!-- #EndEditable "Page%20Title"--></h1>
         </div><!--wrapper-header3-->
       </div><!--wrapper-header2-->
