--- a/htdocs/developers.htm
+++ b/htdocs/developers.htm
@@ -118,13 +118,12 @@
       <p>The code for this project is held in a Subversion server at
       SourceForge. To get the latest version of the code you will need to have
       a copy of Subversion on your machine. The easiest way of getting started
-      if you have not used Subversion is to use of <a target="_blank" href=
-      "http://tortoisesvn.tigris.org/">TortoiseSVN</a> and this is probably the
+      if you have not used Subversion is to use <a target="_blank" href=
+      "http://tortoisesvn.tigris.org/">TortoiseSVN</a>, and this is probably the
       easiest way of setting things up.</p>
 
       <p>Once you have installed Subversion make sure that the svn.exe is in
-      your path. This can be achieved by adding the directory where you
-      installed Subversion to your path.</p>
+      your path.</p>
 
       <p>To get the latest source goto the directory below where you wish to
       extract the source and type:</p>
@@ -132,7 +131,7 @@
 svn co https://deinterlace.svn.sourceforge.net:/svnroot/deinterlace/Trunk 
 </pre>
 
-      <p>This will get all the latest source from the server.</p>
+      <p>This will get all the latest source for all our projects from the server.</p>
 
       <h2>Updating your local copy</h2>
 
