Made Help a relative link

--- a/htdocs/dscaler4.htm
+++ b/htdocs/dscaler4.htm
@@ -76,7 +76,7 @@
 
         <h3>Documentation</h3>
         <ul>
-          <li><a href="http://deinterlace.sourceforge.net/Help/">Online Help</a><br /></li>
+          <li><a href="./Help/">Online Help</a><br /></li>
   
           <li><a href="setup/index.htm">Setup</a><br /></li>
   
